--- a/propos.html
+++ b/propos.html
@@ -190,7 +190,7 @@
 
 <!-- end second-->   
      
-<div class="container" style="padding-top: 4rem; padding-bottom: 4rem;">
+<div class="container mnav" style="padding-top: 4rem; padding-bottom: 4rem;">
   <h1 style="text-align: center; font-family: 'Bad Script'; font-weight: bold;">Nos partenaires:</h1>
   <p class="pb-5" style="text-align: center; color: white;"><i style="border-bottom: 4px solid rgb(253, 55, 0);">bonjourbonjourbonjour</i></p>
   <section class="customer-logos slider">
@@ -320,7 +320,7 @@ navbar.classList.remove("sticky");
 
 $(document).ready(function(){
 $('.customer-logos').slick({
-    slidesToShow: 6,
+    slidesToShow: 4,
     slidesToScroll: 1,
     autoplay: true,
     autoplaySpeed: 1500,
