--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     
 <div id="site">
         
-  <div id="carouselExampleIndicators" class="carousel slide mnav container-fluid my-0 px-0" data-bs-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide container-fluid my-0 px-0" data-bs-ride="carousel">
     <div class="carousel-indicators py-0">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -364,11 +364,12 @@ var navbar = document.getElementById("navbar");
 var sticky = navbar.offsetTop;
 
 function myFunction() {
-  if (window.pageYOffset >= sticky && window.pageXOffset < 1200) {
+  if (window.pageXOffset < 1200) {
+  if (window.pageYOffset >= sticky) {
     navbar.classList.add("sticky")
   } else {
     navbar.classList.remove("sticky");
-  }
+  }}
 }
 
   </script>
