--- a/realisations.html
+++ b/realisations.html
@@ -133,7 +133,7 @@
       
     <div class="row bgColor1 m-0">
       <div class="bgArt p-0">
-        <div class="mnav" style="background-color: rgba(0, 0, 0, 0.7);">
+        <div style="background-color: rgba(0, 0, 0, 0.7);">
       <div class="row text-white p-5">
         <div class="container-fluid text-center">
           <h1 style="text-align: center; font-family: 'Bad Script';
@@ -390,17 +390,20 @@
 
 </body>
 <script>
-window.onscroll = function() {myFunction()};
+var xl = window.matchMedia("(max-width: 600px)");
+      window.onscroll = function() {myFunction(xl)};
 
 var navbar = document.getElementById("navbar");
 var sticky = navbar.offsetTop;
 
-function myFunction() {
-if (window.pageYOffset >= sticky && window.pageXOffset < 1200) {
-navbar.classList.add("sticky")
-} else {
-navbar.classList.remove("sticky");
-}
+function myFunction(x) {
+  
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+
 }
 
 </script>
