--- a/realisations.html
+++ b/realisations.html
@@ -392,7 +392,7 @@
 <script>
 var xl = window.matchMedia("(max-width: 600px)");
       window.onscroll = function() {myFunction(xl)};
-
+      x.addListener(myFunction);
 var navbar = document.getElementById("navbar");
 var sticky = navbar.offsetTop;
 
